--- a/CVAdvisor/ClientApp/src/styles.sass
+++ b/CVAdvisor/ClientApp/src/styles.sass
@@ -1,3 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~@angular/material/prebuilt-themes/deeppurple-amber.css"
-@import "src/assets/themify-icons/themify-icons.css"
+@import "./assets/themify-icons/themify-icons.css"
+.mat-badge-content
+    background: #bbb !important
+    width: 30px !important
+    height: 30px !important
+    line-height: 30px !important
+    top: -18px !important
