--- a/CVAdvisor/ClientApp/src/app/components/chips/chips.component.sass
+++ b/CVAdvisor/ClientApp/src/app/components/chips/chips.component.sass
@@ -8,11 +8,13 @@
   flex-direction: row
   flex-wrap: wrap
   align-items: center
+  padding: 10px
 .list-item
   background-color: #e0e0e0
   color: rgba(0,0,0,.87)
   border-radius: 16px
   display: inline-flex
+  margin: 5px
   padding: 7px 12px
   min-height: 32px
   align-items: center
@@ -20,6 +22,29 @@
   box-sizing: border-box
   font-size: 14px
   font-weight: 500
-
+h5
+  display: inline-block
+  line-height: 40px
+  vertical-align: top
 .ignore
-  background: linear-gradient(#c60304, #e66465)
+  color: #fff
+  background: linear-gradient(#CB356B, #BD3F32)
+
+.main
+  color: #fff
+  background: linear-gradient(#00b09b, #96c93d)
+
+.optional
+  background: linear-gradient(#D3CCE3, #E9E4F0)
+
+.recommended
+  color: #fff
+  background: linear-gradient(#36D1DC, #5B86E5)
+
+.passive
+  color: #fff !important
+  background: linear-gradient(#ccc, #ccc) !important
+
+.hidden
+  .mat-badge-content
+    display: none !important
