--- a/CVAdvisor/ClientApp/src/app/components/chips/chips.component.html
+++ b/CVAdvisor/ClientApp/src/app/components/chips/chips.component.html
@@ -1,36 +1,74 @@
 <div class="group-box" cdkDropListGroup>
-  <h5>Words mined: </h5>
-  <button mat-icon-button (click)="addWord()">
-    <mat-icon>add</mat-icon>
-  </button>
-  <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_m" (cdkDropListDropped)="drop($event)">
-
-    <div class="list-item main" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count" cdkDrag *ngFor="let item of chipsObj.kw_m; let i = index">
-      <div *ngIf="i!=indxEdit">{{item.word}} <i *ngIf="!edit" class="ti-pencil" (click)="makeEditable(chipsObj.kw_m[i])"></i></div>
-      <div *ngIf="i==indxEdit">
-        <mat-form-field>
-          <input matInput [(ngModel)]="item.word">
-
-        </mat-form-field>
-        <i class="ti-check" (click)="saveEdits(item.word)"></i>
-        <i class="ti-close" (click)="cancelEdit()"></i>
+  <div class="row">
+      <div class="group-block col">
+          <mat-form-field>
+            <input matInput [(ngModel)]="chipsObj.position_name" placeholder="Position" />
+          </mat-form-field>
+          <mat-form-field>
+            <textarea matInput [(ngModel)]="chipsObj.text" placeholder="Text"></textarea>
+          </mat-form-field>
+          <button mat-stroked-button (click)="sendText()">Check</button>
+        </div>
+      <div class="group-block col">
+          <h5>Recommended words by ML: </h5>
+          <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_r" (cdkDropListDropped)="drop($event)">
+      
+            <div class="list-item recommended" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count"
+              cdkDrag *ngFor="let item of chipsObj.kw_r">{{item.word}}</div>
+          </div>
+        </div>
+  </div>
+  <div class="row">
+    
+  <div class="group-block col">
+      <h5>Optional words: </h5>
+      <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_o" (cdkDropListDropped)="drop($event)">
+  
+        <div class="list-item optional" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count"
+          cdkDrag *ngFor="let item of chipsObj.kw_o">{{item.word}}</div>
       </div>
-
+    </div>
+    <div class="group-block col">
+      <h5>Words mined: </h5>
+      <button mat-icon-button (click)="addWord()">
+        <mat-icon>add</mat-icon>
+      </button>
+      <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_m" (cdkDropListDropped)="drop($event)">
+  
+        <div class="list-item main" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count"
+          cdkDrag [cdkDragDisabled]="i==indxEdit" *ngFor="let item of chipsObj.kw_m; let i = index">
+          <div *ngIf="i!=indxEdit">
+            {{item.word}} 
+            <i *ngIf="!edit" class="ti-pencil" (click)="makeEditable(chipsObj.kw_m[i])"></i>
+            <i class="ti-close" (click)="moveToIgnored(item)"></i>
+          </div>
+          <div *ngIf="i==indxEdit">
+            <mat-form-field>
+              <input matInput [(ngModel)]="item.word">
+  
+            </mat-form-field>
+            <div class="edit-buttons">
+                <i class="ti-close" (click)="cancelEdit()"></i>
+                <i class="ti-check" (click)="saveEdits(item.word)"></i>
+               
+            </div>
+            
+          </div>
+  
+        </div>
+      </div>
+    </div>
+    <div class="group-block col">
+      <h5>Ignore this words: </h5>
+      <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_d" (cdkDropListDropped)="drop($event)">
+  
+        <div class="list-item ignore" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count"
+          cdkDrag *ngFor="let item of chipsObj.kw_d">{{item.word}}</div>
+      </div>
     </div>
   </div>
-  <h5>Ignore this words: </h5>
-  <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_d" (cdkDropListDropped)="drop($event)">
 
-    <div class="list-item ignore" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count" cdkDrag *ngFor="let item of chipsObj.kw_d">{{item.word}}</div>
-  </div>
-  <h5>Optional words: </h5>
-  <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_o" (cdkDropListDropped)="drop($event)">
 
-    <div class="list-item optional" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count" cdkDrag *ngFor="let item of chipsObj.kw_o">{{item.word}}</div>
-  </div>
-  <h5>Recommended words by ML: </h5>
-  <div class="list-box" cdkDropList [cdkDropListData]="chipsObj.kw_r" (cdkDropListDropped)="drop($event)">
 
-    <div class="list-item recommended" [class.passive]="item.count == 0" [class.hidden]="item.count == -1" [matBadge]="item.count" cdkDrag *ngFor="let item of chipsObj.kw_r">{{item.word}}</div>
-  </div>
+
 </div>
