--- a/CVAdvisor/ClientApp/src/app/pages/home/home.component.html
+++ b/CVAdvisor/ClientApp/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <h1>CV checker</h1>
 <div class="container row">
-    <app-chips [(chipsObj)]="advicesObj"></app-chips>
+    <app-chips></app-chips>
   
     
 </div>
