--- a/CVAdvisor/ClientApp/src/app/components/chips/chips.component.sass
+++ b/CVAdvisor/ClientApp/src/app/components/chips/chips.component.sass
@@ -15,6 +15,7 @@
   display: flex
   flex-direction: row
   flex-wrap: wrap
+  align-content: baseline
   align-items: baseline
   padding: 10px
 .list-item
